--- a/Backend/.env
+++ b/Backend/.env
@@ -1,6 +1,6 @@
 PORT=5000
 JWT_SECRET=supersecretkey123
-FRONTEND_URL=http://localhost:5173/
+FRONTEND_URL=https://counceller-project-2.vercel.app
 
 COMPANY_EMAIL=careerguid09@gmail.com
 COMPANY_EMAIL_PASS=qvxgkikjghaklamz
@@ -9,10 +9,4 @@ ADMIN_EMAIL=careerguid09@gmail.com
 EMAIL_PRIORITY=high
 EMAIL_TIMEOUT=10000
 
-MONGO_URI=mongodb://127.0.0.1:27017/counceller
-
-
-
-# https://counceller-project-2.vercel.app
-
-# mongodb+srv://careerguid09_db_user:Bafiz5cG7zKTQgg5@counselor-website.qaqqycm.mongodb.net/Counselor-database
+MONGO_URI=mongodb+srv://careerguid09_db_user:Bafiz5cG7zKTQgg5@counselor-website.qaqqycm.mongodb.net/Counselor-database
