--- a/Backend/package.json
+++ b/Backend/package.json
@@ -8,14 +8,15 @@
     "dev": "nodemon server.js"
   },
   "dependencies": {
-    "express": "^5.2.1",
-    "mongoose": "^9.1.6",
-    "socket.io": "^4.8.1",
+    "bcryptjs": "^3.0.3",
     "cors": "^2.8.6",
     "dotenv": "^17.2.3",
-    "bcryptjs": "^3.0.3",
-    "jsonwebtoken": "^9.0.3",
     "exceljs": "^4.4.0",
-    "morgan": "^1.10.1"
+    "express": "^5.2.1",
+    "jsonwebtoken": "^9.0.3",
+    "mongoose": "^9.1.6",
+    "morgan": "^1.10.1",
+    "nodemailer": "^8.0.1",
+    "socket.io": "^4.8.1"
   }
 }
