--- a/Frontend/vercel.json
+++ b/Frontend/vercel.json
@@ -3,5 +3,6 @@
   "outputDirectory": "dist",
   "installCommand": "npm install",
   "devCommand": "npm run dev",
-  "framework": "vite"
+  "framework": "vite",
+  "nodeVersion": "20.x"
 }
