--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.7",
     "@tailwindcss/vite": "^4.1.18",
     "aos": "^2.3.4",
     "framer-motion": "^12.30.0",
